--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pex-gui",
   "version": "0.0.1",
   "description": "GUI widgets for the pex library",
-  "homepage": "https://github.com/vorg/pex-gui",
+  "homepage": "https://github.com/vorg/pex-gui.git",
   "keywords": [
     "graphics",
     "gui",
@@ -18,15 +18,15 @@
     "pex-sys": "0.0.1",
     "pex-glu": "0.0.1",
     "pex-geom": "0.0.1",
-    "pex-color": "0.0.1"
+    "pex-color": "0.0.1",
+    "brfs": "^1.1.1",
+    "browserify": "^3.44.2 "
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "repository": {
     "type": "git",
     "url": "https://github.com/vorg/pex-gui.git"
   },
   "bugs": "https://github.com/vorg/pex-gui/issues",
-  "homepage": "https://github.com/vorg/pex-gui.git",
   "license": "MIT"
 }
