--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "brfs": "^1.1.1",
     "browserify": "^3.44.2 "
   },
-  "dependencies": {},
+  "dependencies": {
+    "float-hsl2rgb": "^1.0.2",
+    "float-rgb2hsl": "^1.0.1"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/vorg/pex-gui.git"
