--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   },
   "dependencies": {
     "float-hsl2rgb": "^1.0.2",
-    "float-rgb2hsl": "^1.0.1"
+    "float-rgb2hsl": "^1.0.1",
+    "rgb-hex": "^1.0.0"
   },
   "repository": {
     "type": "git",
