--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "float-hsl2rgb": "^1.0.2",
     "float-rgb2hsl": "^1.0.1",
-    "is-browser": "^2.0.1",
+    "is-plask": "^1.0.0",
     "rgb-hex": "^1.0.0"
   },
   "repository": {
