--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "float-hsl2rgb": "^1.0.2",
     "float-rgb2hsl": "^1.0.1",
-    "is-plask": "^1.0.0",
+    "is-plask": "^1.1.1",
+    "keyboardevent-key-polyfill": "^1.0.2",
     "pex-geom": "^1.0.0-beta.2",
     "pex-sys": "^1.5.1",
     "rgb-hex": "^1.0.0"
