--- a/example/package.json
+++ b/example/package.json
@@ -11,12 +11,11 @@
   "dependencies": {
     "budo": "^9.4.7",
     "is-browser": "^2.0.1",
-    "pex-cam": "^2.0.0",
-    "pex-context": "^2.0.0-5",
+    "pex-cam": "^2.4.0",
+    "pex-context": "^2.0.1",
     "pex-io": "^1.5.0",
-    "pex-math": "^1.0.1",
+    "pex-math": "^2.0.0",
     "primitive-cube": "^2.0.1",
-    "primitive-torus": "^1.0.4",
-    "raf": "^3.3.0"
+    "primitive-torus": "^1.0.4"
   }
 }
