--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pex-gui",
-  "version": "2.0.1-2",
+  "version": "2.1.0",
   "description": "GUI widgets for the pex library",
   "homepage": "https://github.com/pex-gl/pex-gui.git",
   "keywords": [
