--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "pex-gui",
   "version": "2.3.0",
   "description": "GUI widgets for the pex library",
-  "homepage": "https://github.com/pex-gl/pex-gui.git",
+  "main": "index.js",
+  "scripts": {
+    "lint": "npx eslint {example/*,*}.js",
+    "format": "npx prettier {example/*,*}.js --write",
+    "format:check": "npx prettier {example/*,*}.js --check"
+  },
   "keywords": [
     "graphics",
     "gui",
@@ -13,20 +18,56 @@
     "email": "marcin.ignac@gmail.com",
     "url": "http://marcinignac.com"
   },
-  "main": "index.js",
-  "dependencies": {
-    "float-hsl2rgb": "^1.0.2",
-    "float-rgb2hsl": "^1.0.1",
-    "is-plask": "^1.1.1",
-    "keyboardevent-key-polyfill": "^1.0.2",
-    "pex-geom": "^1.0.0-beta.2",
-    "pex-sys": "^1.5.1",
-    "rgb-hex": "^1.0.0"
-  },
+  "contributors": [
+    "Damien Seguin (https://github.com/dmnsgn)"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/pex-gl/pex-gui.git"
   },
+  "license": "MIT",
   "bugs": "https://github.com/pex-gl/pex-gui/issues",
-  "license": "MIT"
+  "homepage": "https://github.com/pex-gl/pex-gui.git",
+  "dependencies": {
+    "float-hsl2rgb": "^1.0.2",
+    "float-rgb2hsl": "^1.0.1",
+    "is-plask": "^1.1.1",
+    "keyboardevent-key-polyfill": "^1.1.0",
+    "pex-geom": "^1.0.0-beta.2",
+    "pex-sys": "^1.7.0",
+    "rgb-hex": "^2.1.0"
+  },
+  "devDependencies": {
+    "eslint": "^5.15.3",
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-plugin-markdown": "^1.0.0",
+    "eslint-plugin-prettier": "^3.0.1",
+    "prettier": "1.16.4"
+  },
+  "prettier": {
+    "semi": false,
+    "singleQuote": true,
+    "arrowParens": "always"
+  },
+  "eslintConfig": {
+    "extends": [
+      "eslint:recommended",
+      "plugin:prettier/recommended"
+    ],
+    "plugins": [
+      "prettier",
+      "markdown"
+    ],
+    "rules": {
+      "prettier/prettier": "error"
+    },
+    "parserOptions": {
+      "ecmaVersion": 2019
+    },
+    "env": {
+      "es6": true,
+      "browser": true,
+      "node": true
+    }
+  }
 }
