--- a/example/package.json
+++ b/example/package.json
@@ -1,21 +1,29 @@
 {
-  "name": "example",
+  "name": "pex-gui-example",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
-  "scripts": {
-    "start": "npx budo index.js --open --live"
-  },
-  "author": "Marcin Ignac <marcin.ignac@gmail.com> (http://marcinignac.com/)",
   "license": "MIT",
+  "author": "Marcin Ignac <marcin.ignac@gmail.com> (http://marcinignac.com/)",
+  "main": "index.js",
+  "scripts": {
+    "build": "npx webpack build",
+    "start": "npx webpack serve --mode=development"
+  },
   "dependencies": {
-    "budo": "^11.6.1",
     "is-browser": "^2.1.0",
-    "pex-cam": "^2.7.1",
-    "pex-context": "^2.8.0",
+    "pex-cam": "^2.8.0",
+    "pex-context": "^2.10.4",
     "pex-io": "^2.1.0",
     "pex-math": "^2.1.1",
     "primitive-cube": "^2.0.1",
     "primitive-torus": "^1.0.4"
+  },
+  "devDependencies": {
+    "webpack": "^5.67.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.3"
+  },
+  "engines": {
+    "node": ">=17"
   }
 }
