refactor: use ES modules
- feat: convert require to import and module.exports to exports
- feat: remove plask
- build: update deps
- fix: hsl not working
- refactor: renderers
- feat: use pex-color
- feat: abstract renderer from pex-context
- feat: add support for typedarrays color/multislider
- fix: pixelRatio > 1 for canvas renderer
- fix: slider active area
- fix: GUIControl.getNormalizedValue alpha index
- feat: make scale responsive

BREAKING CHANGE: switch to type module

--- a/.npmignore
+++ b/.npmignore
@@ -1,3 +1,10 @@
-.git*
-node_modules
-example
+web_modules
+examples
+docs
+coverage
+test
+.github
+screenshot.*
+index.html
+tsconfig.json
+.editorconfig
