--- a/package.json
+++ b/package.json
@@ -34,11 +34,10 @@
     "pex-math": "^4.0.0-alpha.2"
   },
   "devDependencies": {
-    "assert": "^2.0.0",
-    "es-module-shims": "^1.5.9",
+    "es-module-shims": "1.5.17",
     "pex-cam": "^3.0.0-alpha.1",
     "pex-context": "^3.0.0-alpha.0",
-    "pex-io": "github:pex-gl/pex-io#v3",
+    "pex-io": "^3.0.0-alpha.0",
     "primitive-geometry": "^2.7.0"
   },
   "engines": {
