--- a/package.json
+++ b/package.json
@@ -29,16 +29,16 @@
     "release": "snowdev release"
   },
   "dependencies": {
-    "pex-color": "^2.0.0-alpha.2",
-    "pex-geom": "^3.0.0-alpha.3",
-    "pex-math": "^4.0.0-alpha.3"
+    "pex-color": "^2.1.0",
+    "pex-geom": "^3.0.1",
+    "pex-math": "^4.0.0"
   },
   "devDependencies": {
-    "es-module-shims": "1.5.17",
+    "es-module-shims": "1.8.2",
     "pex-cam": "^3.0.0-alpha.1",
     "pex-context": "^3.0.0-alpha.1",
-    "pex-io": "^3.0.0-alpha.0",
-    "primitive-geometry": "^2.7.0"
+    "pex-io": "^3.0.1",
+    "primitive-geometry": "^2.10.0"
   },
   "engines": {
     "node": ">=16.0.0",
