--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pex-gui",
-  "version": "3.0.0-alpha.3",
+  "version": "3.0.0",
   "description": "GUI controls for PEX.",
   "keywords": [
     "pex",
