build: add types to exports field + update ignore files
- support TypeScript 4.7

--- a/package.json
+++ b/package.json
@@ -20,7 +20,12 @@
     "Damien Seguin (https://github.com/dmnsgn)"
   ],
   "type": "module",
-  "exports": "./index.js",
+  "exports": {
+    ".": {
+      "types": "./types/index.d.ts",
+      "default": "./index.js"
+    }
+  },
   "main": "index.js",
   "types": "types/index.d.ts",
   "scripts": {
